# rm-obsidian-sync

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
deploy/: rm-obsidian-sync.service  rmfakecloud.patch
src/rm_sync/: __init__.py  auth.py  cli.py  config.py  hwr_client.py  main.py  obsidian_uploader.py  rm_client.py  rm_parser.py  stroke_renderer.py  vault_watcher.py  vault_writer.py  webhook.py
