[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-obsidian-sync"
version = "0.1.0"
description = "reMarkable ↔ Obsidian bidirectional sync"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "rmscene>=0.4",
    "click>=8.1",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.18",
]

[project.scripts]
rm-upload = "rm_sync.cli:upload_cmd"
rm-register = "rm_sync.cli:register_cmd"
rm-setup-webhook = "rm_sync.cli:setup_webhook_cmd"

[tool.setuptools.packages.find]
where = ["src"]
